[gd_scene load_steps=4 format=2]

[ext_resource path="res://screenshots/tilesheet_complete.png" type="Texture" id=1]
[ext_resource path="res://base_map.gd" type="Script" id=2]

[sub_resource type="TileSet" id=2]
0/name = "tilesheet_complete.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 1152, 576, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "tilesheet_complete.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 1184, 576, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "tilesheet_complete.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 1152, 576, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "tilesheet_complete.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 1152, 608, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "tilesheet_complete.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 1184, 576, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "tilesheet_complete.png 5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 1184, 608, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 6.0
margin_bottom = -26.0
script = ExtResource( 2 )
baseName = NodePath("Panel/ctn_side_menu/lbl_title")

[node name="Panel" type="Panel" parent="."]
process_priority = -5
light_mask = 7
margin_top = -1.0
margin_right = 1025.0
margin_bottom = 579.0

[node name="ctn_build_facilities" type="VBoxContainer" parent="Panel"]
process_priority = 3
margin_left = 578.0
margin_top = 1.0
margin_right = 1027.0
margin_bottom = 573.0
rect_pivot_offset = Vector2( 156, 100 )
alignment = 1

[node name="FundAmount" type="Label" parent="Panel/ctn_build_facilities"]
margin_top = 186.0
margin_right = 449.0
margin_bottom = 200.0
text = "FUNDS"

[node name="Label" type="Label" parent="Panel/ctn_build_facilities"]
margin_top = 204.0
margin_right = 449.0
margin_bottom = 218.0
text = "Installations"
align = 1

[node name="btn_hanger" type="Button" parent="Panel/ctn_build_facilities"]
margin_top = 222.0
margin_right = 449.0
margin_bottom = 242.0
text = "Hanger"

[node name="btn_small_radar" type="Button" parent="Panel/ctn_build_facilities"]
margin_top = 246.0
margin_right = 449.0
margin_bottom = 266.0
text = "Small Radar System"

[node name="btn_large_radar" type="Button" parent="Panel/ctn_build_facilities"]
margin_top = 270.0
margin_right = 449.0
margin_bottom = 290.0
text = "Large Radar System"

[node name="btn_lab" type="Button" parent="Panel/ctn_build_facilities"]
margin_top = 294.0
margin_right = 449.0
margin_bottom = 314.0
text = "Laboratory"

[node name="btn_workshop" type="Button" parent="Panel/ctn_build_facilities"]
margin_top = 318.0
margin_right = 449.0
margin_bottom = 338.0
text = "Workshop"

[node name="btn_workshop2" type="Button" parent="Panel/ctn_build_facilities"]
margin_top = 342.0
margin_right = 449.0
margin_bottom = 362.0
text = "Living Space"

[node name="Back" type="Button" parent="Panel/ctn_build_facilities"]
margin_top = 366.0
margin_right = 449.0
margin_bottom = 386.0
text = "Back"

[node name="ctn_side_menu" type="Container" parent="Panel"]
process_priority = 3
visible = false
margin_top = 1.0
margin_right = 40.0
margin_bottom = 41.0

[node name="lbl_title" type="Label" parent="Panel/ctn_side_menu"]
process_priority = 3
margin_left = 578.0
margin_top = 2.0
margin_right = 1026.0
margin_bottom = 21.0
rect_min_size = Vector2( 0, 4 )
text = "Base Camp"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ctn_side_menu"]
process_priority = 3
margin_left = 581.0
margin_right = 1023.0
margin_bottom = 575.0
size_flags_vertical = 4
alignment = 1

[node name="btn_base_info" type="Button" parent="Panel/ctn_side_menu/VBoxContainer"]
margin_top = 217.0
margin_right = 442.0
margin_bottom = 237.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
text = "Base Information"

[node name="btn_soldiers" type="Button" parent="Panel/ctn_side_menu/VBoxContainer"]
margin_top = 241.0
margin_right = 442.0
margin_bottom = 261.0
text = "Soldiers"

[node name="btn_build_facilities" type="Button" parent="Panel/ctn_side_menu/VBoxContainer"]
visible = false
margin_top = 265.0
margin_right = 442.0
margin_bottom = 285.0
text = "Build Facilities"

[node name="btn_research" type="Button" parent="Panel/ctn_side_menu/VBoxContainer"]
margin_top = 289.0
margin_right = 442.0
margin_bottom = 309.0
text = "Research"

[node name="btn_production" type="Button" parent="Panel/ctn_side_menu/VBoxContainer"]
margin_top = 313.0
margin_right = 442.0
margin_bottom = 333.0
text = "Production"

[node name="back" type="Button" parent="Panel/ctn_side_menu/VBoxContainer"]
margin_top = 337.0
margin_right = 442.0
margin_bottom = 357.0
text = "Back"

[node name="base_map" type="TileMap" parent="Panel"]
process_priority = 3
position = Vector2( 0, 1 )
scale = Vector2( 3, 3 )
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, -1073741823, 0, 1, -1073741819, 0, 2, -1073741823, 0, 3, -1073741819, 0, 4, -1073741823, 0, 5, -1073741819, 0, 65536, -1073741822, 0, 65537, -1073741821, 0, 65538, -1073741822, 0, 65539, -1073741821, 0, 65540, -1073741822, 0, 65541, -1073741821, 0, 131072, -1073741823, 0, 131073, -1073741819, 0, 131074, -1073741823, 0, 131075, -1073741819, 0, 131076, -1073741823, 0, 131077, -1073741819, 0, 196608, -1073741822, 0, 196609, -1073741821, 0, 196610, -1073741822, 0, 196611, -1073741821, 0, 196612, -1073741822, 0, 196613, -1073741821, 0, 262144, -1073741823, 0, 262145, -1073741819, 0, 262146, -1073741823, 0, 262147, -1073741819, 0, 262148, -1073741823, 0, 262149, -1073741819, 0, 327680, -1073741822, 0, 327681, -1073741821, 0, 327682, -1073741822, 0, 327683, -1073741821, 0, 327684, -1073741822, 0, 327685, -1073741821, 0 )

[node name="BaseInfo" type="ItemList" parent="Panel"]
visible = false
margin_left = 578.0
margin_top = 22.0
margin_right = 1025.0
margin_bottom = 552.0
fixed_icon_size = Vector2( 50, 50 )

[node name="Button" type="Button" parent="Panel/BaseInfo"]
margin_left = 37.0
margin_top = 505.0
margin_right = 403.0
margin_bottom = 525.0
text = "Back"

[node name="SoldierList" type="ItemList" parent="Panel"]
visible = false
margin_left = 578.0
margin_top = 16.0
margin_right = 1025.0
margin_bottom = 552.0
fixed_icon_size = Vector2( 50, 50 )

[node name="Button2" type="Button" parent="Panel/SoldierList"]
margin_left = 37.0
margin_top = 511.0
margin_right = 403.0
margin_bottom = 531.0
text = "Back"

[node name="ResearchList" type="ItemList" parent="Panel"]
visible = false
margin_left = 578.0
margin_top = 22.0
margin_right = 1025.0
margin_bottom = 552.0
fixed_icon_size = Vector2( 30, 30 )

[node name="btn_res" type="Button" parent="Panel/ResearchList"]
margin_left = 37.0
margin_top = 481.0
margin_right = 403.0
margin_bottom = 501.0
text = "Start Research"

[node name="btn_resBack" type="Button" parent="Panel/ResearchList"]
margin_left = 37.0
margin_top = 505.0
margin_right = 403.0
margin_bottom = 525.0
text = "Back"

[node name="ProductionList" type="ItemList" parent="Panel"]
visible = false
margin_left = 578.0
margin_top = 16.0
margin_right = 1025.0
margin_bottom = 552.0

[node name="btn_Startprod" type="Button" parent="Panel/ProductionList"]
margin_left = 37.0
margin_top = 487.0
margin_right = 403.0
margin_bottom = 507.0
text = "Start Production"

[node name="btn_prodBack" type="Button" parent="Panel/ProductionList"]
margin_left = 37.0
margin_top = 511.0
margin_right = 403.0
margin_bottom = 531.0
text = "Back"

[connection signal="pressed" from="Panel/ctn_build_facilities/Back" to="." method="_on_CTNBack_pressed"]
[connection signal="pressed" from="Panel/ctn_side_menu/VBoxContainer/btn_base_info" to="." method="_on_btn_base_info_pressed"]
[connection signal="pressed" from="Panel/ctn_side_menu/VBoxContainer/btn_soldiers" to="." method="_on_btn_soldiers_pressed"]
[connection signal="pressed" from="Panel/ctn_side_menu/VBoxContainer/btn_build_facilities" to="." method="_on_btn_build_facilities_pressed"]
[connection signal="pressed" from="Panel/ctn_side_menu/VBoxContainer/btn_research" to="." method="_on_btn_research_pressed"]
[connection signal="pressed" from="Panel/ctn_side_menu/VBoxContainer/btn_production" to="." method="_on_btn_production_pressed"]
[connection signal="pressed" from="Panel/ctn_side_menu/VBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Panel/BaseInfo/Button" to="." method="_on_BIButton_pressed"]
[connection signal="pressed" from="Panel/SoldierList/Button2" to="." method="_on_SLButton_pressed"]
[connection signal="pressed" from="Panel/ResearchList/btn_res" to="." method="_on_btn_res_pressed"]
[connection signal="pressed" from="Panel/ResearchList/btn_resBack" to="." method="_on_btn_resBack_pressed"]
[connection signal="pressed" from="Panel/ProductionList/btn_Startprod" to="." method="_on_btn_Startprod_pressed"]
[connection signal="pressed" from="Panel/ProductionList/btn_prodBack" to="." method="_on_btn_prodBack_pressed"]
